# tp3-micro-services

./: .dockerignore  .gitignore  docker-compose.yml  init-databases.sql
billing-service/: pyproject.toml
billing-service/app/: config.py  consul_client.py  database.py  main.py  models.py
billing-service/app/clients/: customer_client.py  products_client.py
billing-service/app/routers/: bills.py
billing-service/app/services/: billing_service.py
billing-service/tests/: conftest.py  test_billing_service.py  test_bills_api.py  test_config_consul.py  test_models_validation.py
customer-service/: pyproject.toml
customer-service/app/: config.py  consul_client.py  crud.py  main.py  models.py
customer-service/app/routers/: customers.py
customer-service/tests/: conftest.py  test_config_consul.py  test_crud.py  test_customers_api.py  test_models_validation.py
inventory-service/: .dockerignore  Dockerfile  pyproject.toml
inventory-service/app/: config.py  consul_client.py  crud.py  database.py  main.py  models.py
inventory-service/app/routers/: products.py
inventory-service/tests/: conftest.py  test_config_consul.py  test_crud.py  test_models_validation.py  test_products_api.py
traefik/: traefik.yml
